# Hedonic_Regeression_test

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: model_feature_preprocessing.md  mysql_training_schema.md
docs/superpowers/plans/: 2026-06-01-seoul-apt-hedonic-price-model.md  2026-06-08-mysql-housing-price-factor-db.md
docs/superpowers/specs/: 2026-06-01-seoul-apt-hedonic-price-model-design.md  (+1 more)
scripts/: export_unmatched_complex_reports.py  fetch_historical_floor_stats.sh  refresh_apartment_db.sh
sql/: mysql_schema.sql  mysql_seed_regions.sql
src/hedonic_house_price/: academies.py  access_times.py  bus_stops.py  cli.py  client.py  complex_info.py  config.py  dates.py  db.py  db_import.py  db_maintenance.py  db_training.py  feature_coverage.py  features.py  geocoding.py  gui.py  healthcare.py  historical_floors.py  law_codes.py  linear_model.py  model_diagnostics.py  modeling.py  parks.py  school_distances.py  subway_distances.py  training_runs.py  transactions.py
tests/: test_academies.py  test_access_times.py  test_batch_scripts.py  test_bus_stops.py  test_cli.py  test_client.py  test_complex_info.py  test_dates_and_codes.py  test_db.py  test_db_import.py  test_db_maintenance.py  test_db_training.py  test_feature_coverage.py  test_features.py  test_geocoding.py  test_gui.py  test_healthcare.py  test_historical_floors.py  test_linear_model.py  test_model_diagnostics.py  test_modeling.py  test_mysql_schema.py  test_parks.py  test_school_distances.py  test_subway_distances.py  test_training_runs.py
